--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
   "dependencies": {
     "antd-mobile": "^2.3.1",
     "axios": "^0.19.0",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
