--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     }
   },
   "dependencies": {
+    "@antv/f2": "^3.4.1",
     "antd-mobile": "^2.3.1",
     "axios": "^0.19.0",
     "prop-types": "^15.7.2",
